test/spec_vectors/simd_i16x8_cmp/fail/module_13.wat
(module (func $i16x8.eq-arg-empty (result v128) (i16x8.eq)))